k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
  labels:
    app.kubernetes.io/name: homelab
    app.kubernetes.io/part-of: homelab
